<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="login"
            type="com.tugcearas.movieapp.ui.login.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginScreen"
        android:background="@color/light_blue">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/logo_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image"
            android:layout_marginTop="20dp"
            android:text="@string/the_movie_manager"
            android:textSize="28sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_subtitle"
            android:layout_marginTop="80dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/piction_blue"
                android:hint="@string/username"
                android:text="@={login.username}"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textColorHint="@color/battleship_grey"
                tools:ignore="Autofill,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_layout"
            app:passwordToggleEnabled="true"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@color/piction_blue"
                android:hint="@string/password"
                android:singleLine="true"
                android:text="@={login.password}"
                android:textColor="@color/black"
                android:textColorHint="@color/battleship_grey"
                android:textSize="16sp"
                tools:ignore="Autofill,TextFields,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="330dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/seperate_tv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/website_button"
            android:layout_width="330dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seperate_tv"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/login_via_website"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/login_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:text="@string/this_product_uses_the_tmdb_api_but_is_not_n_endorsed_or_certified_by_tmdb"
            android:textColor="@color/white"
            android:textAlignment="center" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>